tests/spec/build/snapshots/go_three_value_return_tuple.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strings"
)

func main() {
	ret, ret_1, ret_2 := strings.Cut("hello-world", "-")
	result := lisette.MakeTuple3(ret, ret_1, ret_2)
	fmt.Println(result)
}
