tests/spec/build/snapshots/go_type_same_name_as_prelude_uses_go_methods.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"sync"
)

func main() {
	m := sync.Map{}
	m.Store("key", "value")
	ret_1, ok := m.Load("key")
	if ok {
		v := ret_1
		fmt.Printf("got: %v\n", v)
	} else {
		fmt.Println("not found")
	}
}
