tests/spec/build/snapshots/impl_bounds_with_module_alias_import_path.snap
---
source: tests/spec/build/mod.rs
---
// === ifaces/ifaces.go ===
package ifaces

type Printable interface {
	Print() string
}


// === main.go ===
package main

import (
	"fmt"
	I "github.com/user/myproject/ifaces"
)

type Box[T I.Printable] struct {
	value T
}

func (b Box[T]) GoString() string {
	return fmt.Sprintf("Box { value: %v }", b.value)
}

func (b Box[T]) show() string {
	return b.value.Print()
}

type Name struct {
	name string
}

func (n Name) GoString() string {
	return fmt.Sprintf("Name { name: %v }", n.name)
}

func (n Name) Print() string {
	return n.name
}

func main() {
	b := Box[Name]{value: Name{name: "hello"}}
	_ = b.show()
}
