tests/spec/build/snapshots/impl_bounds_with_package_alias_import_path.snap
---
source: tests/spec/build/mod.rs
---
// === ifaces/ifaces.go ===
package ifaces

type Printable interface {
	Print() string
}


// === main.go ===
package main

import I "github.com/user/myproject/ifaces"

type Box[T I.Printable] struct {
	value T
}

func (b Box[T]) show() string {
	return b.value.Print()
}

type Name struct {
	name string
}

func (n Name) Print() string {
	return n.name
}

func main() {
	b := Box[Name]{value: Name{name: "hello"}}
	b.show()
}
