tests/spec/build/snapshots/import_alias_local_module.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import u "github.com/user/myproject/utils"

func main() {
	_ = u.Add(1, 2)
}


// === utils/lib.go ===
package utils

func Add(a, b int) int {
	return a + b
}
