tests/spec/build/snapshots/import_alias_local_package.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import u "github.com/user/myproject/utils"

func main() {
	u.Add(1, 2)
}


// === utils/lib.go ===
package utils

func Add(a, b int) int {
	return a + b
}
