tests/spec/build/snapshots/import_alias_static_method_call.snap
---
source: tests/spec/build/mod.rs
---
// === lib/lib.go ===
package lib

type Point struct {
	X int
	Y int
}

func Point_New(x, y int) Point {
	return Point{
		X: x,
		Y: y,
	}
}


// === main.go ===
package main

import L "github.com/user/myproject/lib"

func main() {
	L.Point_New(3, 4)
}
