tests/spec/build/snapshots/inherited_comma_ok_hint_propagates_to_child_iface_cast.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Entry struct {
	name string
}

type BaseCache interface {
	Get(string) (*Entry, bool)
}

type ExtendedCache interface {
	BaseCache
	Touch()
}

type MyCache struct{}

func (m MyCache) Get(_ string) *Entry {
	return nil
}

func (m MyCache) Touch() {}

func useExtended(_ ExtendedCache) {}

func main() {
	c := MyCache{}
	useExtended(_lisAdapter_MyCache_ExtendedCache_0{inner: c})
}

type _lisAdapter_MyCache_ExtendedCache_0 struct {
	inner MyCache
}

func (a _lisAdapter_MyCache_ExtendedCache_0) Touch() {
	a.inner.Touch()
}

func (a _lisAdapter_MyCache_ExtendedCache_0) Get(arg0 string) (*Entry, bool) {
	raw := a.inner.Get(arg0)
	option := lisette.OptionFromNilable[*Entry](raw, raw == nil)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal, true
	}
	return nil, false
}
