tests/spec/build/snapshots/iterable_enum_export_name_consistency.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func MakePublicPhaseBuild() PublicPhase {
	return PublicPhase{Tag: PublicPhaseBuild}
}

func MakeLocalPhaseCheck() LocalPhase {
	return LocalPhase{Tag: LocalPhaseCheck}
}

type PublicPhaseTag int

const (
	PublicPhaseBuild PublicPhaseTag = iota
)

type PublicPhase struct {
	Tag PublicPhaseTag
}

func PublicPhase_Variants() []PublicPhase {
	return []PublicPhase{
		{Tag: PublicPhaseBuild},
	}
}

type LocalPhaseTag int

const (
	LocalPhaseCheck LocalPhaseTag = iota
)

type LocalPhase struct {
	Tag LocalPhaseTag
}

func LocalPhase_Variants() []LocalPhase {
	return []LocalPhase{
		{Tag: LocalPhaseCheck},
	}
}

func main() {
	_ = LocalPhase_Variants()
	_ = PublicPhase_Variants()
}
